--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,4 +1,184 @@
+@charset "UTF-8";
 body {
+  margin: 0 15%;
   width: 960px;
+}
+
+body header {
+  background-color: #434343;
+}
+
+body header input {
+  display: none;
+}
+
+body header #menu {
+  display: none;
+}
+
+body #top-img {
+  width: 100%;
+}
+
+body #wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body #wrap #left-content {
+  background-color: #C6C6C6;
+  width: 20%;
+  height: 100%;
+}
+
+body #wrap #rgith-content {
+  width: 80%;
+  height: 100%;
+}
+
+body #wrap #rgith-content .gallery {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100px auto;
+      grid-template-rows: 100px auto;
+  -ms-grid-columns: 200px 100px 100px;
+      grid-template-columns: 200px 100px 100px;
+}
+
+body #wrap #rgith-content .gallery .g-img1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+body #wrap #rgith-content .gallery .g-img2 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+body #wrap #rgith-content .gallery .g-img3 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+}
+
+body #wrap #rgith-content .gallery .g-img4 {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+}
+
+@media screen and (max-width: 480px) {
+  header {
+    background-color: #434343;
+    color: #fff;
+  }
+  header #menu {
+    display: block;
+  }
+  header #menu .menu-btn {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    z-index: 90;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header #menu .menu-btn span {
+    content: '';
+    display: block;
+    height: 4px;
+    width: 30px;
+    background-color: black;
+    position: absolute;
+  }
+  header #menu .menu-btn span::after {
+    content: '';
+    display: block;
+    height: 4px;
+    width: 30px;
+    background-color: black;
+    position: absolute;
+    top: 8px;
+  }
+  header #menu .menu-btn span::before {
+    content: '';
+    display: block;
+    height: 4px;
+    width: 30px;
+    background-color: black;
+    position: absolute;
+    bottom: 8px;
+  }
+  header #menu .menu-list {
+    width: 100%;
+    height: 90%;
+    position: fixed;
+    bottom: 0;
+    left: 100%;
+    z-index: 80;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  header #menu .menu-list ul {
+    padding: 70px 10px 0;
+  }
+  header #menu .menu-list ul li {
+    text-align: center;
+    margin: 50px;
+    list-style: none;
+  }
+  header #menu .menu-list ul li a {
+    color: #fff;
+    font-size: 30px;
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    text-decoration: none;
+    position: relative;
+    padding-bottom: 8px;
+  }
+  header #menu .menu-list ul li a::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -15px;
+    /*線の上下位置*/
+    display: inline-block;
+    width: 50px;
+    /*線の長さ*/
+    height: 4px;
+    /*線の太さ*/
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    /*位置調整*/
+    background-color: #fff;
+    /*線の色*/
+  }
+  header #menu #menu-btn-check:checked ~ .menu-list {
+    left: 0;
+  }
 }
 /*# sourceMappingURL=index.css.map */
