--- a/stylesheet/index.scss
+++ b/stylesheet/index.scss
@@ -1,3 +1,148 @@
 body {
+    margin: 0 15%;
     width: 960px;
+    header {
+        background-color: #434343;
+        input {
+            display: none;
+        }
+        #menu {
+            display: none;
+        }
+    }
+    #top-img {
+        width: 100%;
+    }
+    #wrap {
+        display: flex;
+        #left-content {
+            background-color: #C6C6C6;
+            width: 20%;
+            height: 100%;
+        }
+        #rgith-content {
+            width: 80%;
+            height: 100%;
+            .gallery {
+                display: grid;
+                grid-template-rows: 100px auto;
+                grid-template-columns: 200px 100px 100px;
+                .g-img1 {
+                    grid-row: 1 / 3;
+                    grid-column: 1 / 2;
+                }
+                .g-img2 {
+                    grid-row: 1 / 2;
+                    grid-column: 2 / 3;
+                }
+                .g-img3 {
+                    grid-row: 2 / 3;
+                    grid-column: 2 / 3;
+                }
+                .g-img4 {
+                    grid-row: 2 / 3;
+                    grid-column: 3 / 4;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    // SP用ハンバーガーメニュー
+    header {
+        $span-height: 4px;
+        $span-width: 30px;
+        background-color: #434343;
+        color: #fff;
+        #menu {
+            display: block;
+            .menu-btn {
+                position: fixed;
+                top: 10px;
+                right: 10px;
+                width: 50px;
+                height: 50px;
+                z-index: 90;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                span {
+                    content: '';
+                    display: block;
+                    height: $span-height;
+                    width: $span-width;
+                    background-color: rgb(0, 0, 0);
+                    position: absolute;
+                }
+                span::after {
+                    content: '';
+                    display: block;
+                    height: $span-height;
+                    width: $span-width;
+                    background-color: rgb(0, 0, 0);
+                    position: absolute;
+                    top: 8px;
+                }
+                span::before {
+                    content: '';
+                    display: block;
+                    height: $span-height;
+                    width: $span-width;
+                    background-color: rgb(0, 0, 0);
+                    position: absolute;
+                    bottom: 8px;
+                }
+            }
+            
+            .menu-list {
+                width: 100%;
+                height: 90%;
+                position: fixed;
+                bottom: 0;
+                left: 100%;
+                z-index: 80;
+                background-color: rgba(0, 0, 0, 0.3);
+                ul {
+                    padding: 70px 10px 0;
+                }
+                ul li {
+                    text-align: center;
+                    margin: 50px;
+                    list-style: none;
+                }
+                ul li a {
+                    color: #fff;
+                    font-size: 30px;
+                    display: inline-block;
+                    box-sizing: border-box;
+                    text-decoration: none;
+                    position: relative;
+                    padding-bottom: 8px;
+                }
+                ul li a::after {
+                    content: '';
+                    position: absolute;
+                    left: 50%;
+                    bottom: -15px;
+                    /*線の上下位置*/
+                    display: inline-block;
+                    width: 50px;
+                    /*線の長さ*/
+                    height: 4px;
+                    /*線の太さ*/
+                    -webkit-transform: translateX(-50%);
+                    transform: translateX(-50%);
+                    /*位置調整*/
+                    background-color: #fff;
+                    /*線の色*/
+                }
+            }
+            
+            #menu-btn-check:checked~.menu-list {
+                left: 0;
+            }
+        }
+    }
+    // ーーーーーーーーーーーーーーーーーーーーーーーーーーーー
 }
