--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -16,7 +16,7 @@ body header #menu {
   display: none;
 }
 
-body #top-img {
+body .top-img {
   width: 100%;
 }
 
@@ -32,21 +32,22 @@ body #wrap #left-content {
   height: 100%;
 }
 
-body #wrap #rgith-content {
+body #wrap #right-content {
   width: 80%;
   height: 100%;
 }
 
-body #wrap #rgith-content .gallery {
+body #wrap #right-content #gallery {
+  margin: 50px 5% 0 5%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 100px auto;
-      grid-template-rows: 100px auto;
-  -ms-grid-columns: 200px 100px 100px;
-      grid-template-columns: 200px 100px 100px;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
+  -ms-grid-columns: auto auto auto;
+      grid-template-columns: auto auto auto;
 }
 
-body #wrap #rgith-content .gallery .g-img1 {
+body #wrap #right-content #gallery .g-img1 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
@@ -55,16 +56,16 @@ body #wrap #rgith-content .gallery .g-img1 {
   grid-column: 1 / 2;
 }
 
-body #wrap #rgith-content .gallery .g-img2 {
+body #wrap #right-content #gallery .g-img2 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
 }
 
-body #wrap #rgith-content .gallery .g-img3 {
+body #wrap #right-content #gallery .g-img3 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
@@ -73,13 +74,130 @@ body #wrap #rgith-content .gallery .g-img3 {
   grid-column: 2 / 3;
 }
 
-body #wrap #rgith-content .gallery .g-img4 {
+body #wrap #right-content #gallery .g-img4 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3 / 4;
+}
+
+body #wrap #right-content #youtube {
+  margin: 50px 5% 0 5%;
+}
+
+body #wrap #right-content #information {
+  background-color: #7B7B7B;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 80px 0 0 0;
+  width: 100%;
+  height: 300px;
+}
+
+body #wrap #right-content #information .information-title {
+  padding: 100px 0;
+  margin: 30px 0;
+  text-align: center;
+  width: 30%;
+  border-right: solid 2px #fff;
+}
+
+body #wrap #right-content #information .information-title h3 {
+  font-size: 20px;
+}
+
+body #wrap #right-content #information .information-title h3::after {
+  content: '';
+  display: inline-block;
+  width: 50px;
+  /*線の長さ*/
+  height: 4px;
+  /*線の太さ*/
+  background-color: #fff;
+  /*線の色*/
+}
+
+body #wrap #right-content #information .information-list {
+  margin-left: 10%;
+}
+
+body #wrap #right-content #information .information-list ul {
+  margin-top: 25%;
+}
+
+body #wrap #right-content #information .information-list ul li {
+  padding: 10px;
+}
+
+body #wrap #right-content #itroduction-area1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 80px 5% 0 5%;
+}
+
+body #wrap #right-content #shopping {
+  background-color: #7B7B7B;
+  margin: 80px 0 0 0;
+}
+
+body #wrap #right-content #shopping .item-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body #wrap #right-content #shopping .item-box .item1 {
+  background-color: #fff;
+}
+
+body #wrap #right-content #shopping .item-box .item1 img {
+  height: 200px;
+  width: 200px;
+}
+
+body #wrap #right-content #shopping .item-box .item1 p {
+  font-size: 14px;
+}
+
+body #wrap #right-content #shopping .item-box .item2 {
+  background-color: #fff;
+}
+
+body #wrap #right-content #shopping .item-box .item2 img {
+  height: 200px;
+  width: 200px;
+}
+
+body #wrap #right-content #shopping .item-box .item2 p {
+  font-size: 14px;
+}
+
+body #wrap #right-content #shopping .item-box .item3 {
+  background-color: #fff;
+}
+
+body #wrap #right-content #shopping .item-box .item3 img {
+  height: 200px;
+  width: 200px;
+}
+
+body #wrap #right-content #shopping .item-box .item3 p {
+  font-size: 14px;
+}
+
+body #wrap #right-content #itroduction-area2 {
+  margin: 50px 5% 0 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 480px) {
