--- a/stylesheet/index.scss
+++ b/stylesheet/index.scss
@@ -10,7 +10,7 @@ body {
             display: none;
         }
     }
-    #top-img {
+    .top-img {
         width: 100%;
     }
     #wrap {
@@ -20,20 +20,21 @@ body {
             width: 20%;
             height: 100%;
         }
-        #rgith-content {
+        #right-content {
             width: 80%;
             height: 100%;
-            .gallery {
+            #gallery {
+                margin: 50px 5% 0 5%;
                 display: grid;
-                grid-template-rows: 100px auto;
-                grid-template-columns: 200px 100px 100px;
+                grid-template-rows: auto auto;
+                grid-template-columns: auto auto auto;
                 .g-img1 {
                     grid-row: 1 / 3;
                     grid-column: 1 / 2;
                 }
                 .g-img2 {
                     grid-row: 1 / 2;
-                    grid-column: 2 / 3;
+                    grid-column: 2 / 4;
                 }
                 .g-img3 {
                     grid-row: 2 / 3;
@@ -43,6 +44,96 @@ body {
                     grid-row: 2 / 3;
                     grid-column: 3 / 4;
                 }
+            }
+            #youtube {
+                margin: 50px 5% 0 5%;
+            }
+            #information {
+                background-color: #7B7B7B;
+                color: #fff;
+                display: flex;
+                margin: 80px 0 0 0;
+                width: 100%;
+                height: 300px;
+                .information-title {
+                    padding: 100px 0;
+                    margin: 30px 0;
+                    text-align: center;
+                    width: 30%;
+                    border-right: solid 2px #fff;
+                    h3 {
+                        font-size: 20px;
+                    }
+                    h3::after {
+                        content: '';
+                        display: inline-block;
+                        width: 50px;
+                        /*線の長さ*/
+                        height: 4px;
+                        /*線の太さ*/
+                        background-color: #fff;
+                        /*線の色*/
+                    }
+                }
+                .information-list {
+                    margin-left: 10%;
+                    ul {
+                        margin-top: 25%;
+                        li {
+                            padding: 10px;
+                        }
+                    }
+                }
+            }
+            #itroduction-area1 {
+                display: flex;
+                margin: 80px 5% 0 5%;
+            }
+            #shopping {
+                background-color:#7B7B7B;
+                margin: 80px 0 0 0;
+                .item-box {
+                    $item-color: #fff;
+                    $item-img-height: 200px;
+                    $item-img-width: 200px;
+                    $item-font-size: 14px;
+                    display: flex;
+                    justify-content: center;
+                    .item1 {
+                        background-color: $item-color;
+                        img {
+                            height: $item-img-height;
+                            width: $item-img-width;
+                        }
+                        p {
+                            font-size: $item-font-size;
+                        }
+                    }
+                    .item2 {
+                        background-color: $item-color;
+                        img {
+                            height: $item-img-height;
+                            width: $item-img-width;
+                        }
+                        p {
+                            font-size: $item-font-size;
+                        }
+                    }
+                    .item3 {
+                        background-color: $item-color;
+                        img {
+                            height: $item-img-height;
+                            width: $item-img-width;
+                        }
+                        p {
+                            font-size: $item-font-size;
+                        }
+                    }
+                }
+            }
+            #itroduction-area2 {
+                margin: 50px 5% 0 5%;
+                display: flex;
             }
         }
     }
