--- a/stylesheet/index.scss
+++ b/stylesheet/index.scss
@@ -119,6 +119,9 @@ body {
                     grid-column: 3 / 4;
                 }
             }
+            .sp-gallery {
+                display: none;
+            }
             #youtube {
                 margin: 50px 5% 0 5%;
             }
@@ -229,6 +232,9 @@ body {
                             font-size: $item-font-size;
                             margin: 5px 0 20px 0;
                         }
+                        .sp-btn {
+                            display: none;
+                        }
                     }
                     .item2 {
                         background-color: $item-color;
@@ -241,6 +247,9 @@ body {
                             font-size: $item-font-size;
                             margin: 5px 0 20px 0;
                         }
+                        .sp-btn {
+                            display: none;
+                        }
                     }
                     .item3 {
                         background-color: $item-color;
@@ -252,9 +261,12 @@ body {
                             font-size: $item-font-size;
                             margin: 5px 0 20px 0;
                         }
+                        .sp-btn {
+                            display: none;
+                        }
                     }
                 }
-                button {
+                .pc-btn {
                     background-color: #EB68A0;
                     border: solid 2px #fff;
                     border-radius: 50px;
@@ -661,6 +673,59 @@ body {
                         grid-column: 3 / 4;
                     }
                 }
+
+                .sp-gallery {
+                    display: block;
+                    overflow: hidden;
+                    // slick設定
+                    .slider {
+                        width: 100%;
+                        padding: 0;
+                        img {
+                            height: 600px;
+                            width: 100%;
+                        }
+                        .slide_title {
+                            position: relative;
+                            height: 345px;
+                            background-color: #ffe6e6;
+                            p {
+                                position: absolute;
+                                top: calc(50% - 30px);
+                                left: calc(50% - 21px);
+                                font-weight: bold;
+                            }
+                        }
+                    }
+                    
+                    .s-dots {
+                        text-align: center;
+                        li {
+                            display: inline-block;
+                            margin-right: 5px;
+                            button {
+                                position: relative;
+                                text-indent: -9999px;
+                                border: none;
+                                background: none;
+                            }
+                        }
+                    }
+                                        
+                    .s-dots li button:before {
+                        color: #fff;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        text-indent: 0;
+                        content: "○";
+                        font-size: 24px;
+                    }
+                    
+                    .s-dots li.slick-active button::before {
+                        content: "●";
+                    }
+                }
     
                 #youtube {
                     margin: 50px 5% 0 5%;
@@ -786,12 +851,25 @@ body {
                             p {
                                 background-color: #fff;
                                 font-size: $item-font-size;
+                                margin: 5px 0 10px 0;
+                            }
+                            .sp-btn {
+                                display: block;
+                                background-color: #EB68A0;
+                                border: solid 2px #fff;
+                                border-radius: 50px;
+                                box-shadow: 0px 0px 8px gray;
+                                color: #fff;
+                                cursor: pointer;
+                                width: 150px;
+                                font-size: 17px;
+                                margin: 0 0 50px 40%;
                             }
                         }
     
                         .item2 {
                             background-color: $item-color;
-    
+                            margin: 0;
                             img {
                                 height: $item-img-height;
                                 width: $item-img-width;
@@ -800,12 +878,25 @@ body {
                             p {
                                 font-size: $item-font-size;
                                 background-color: #fff;
+                                margin: 5px 0 10px 0;
+                            }
+                            .sp-btn {
+                                display: block;
+                                background-color: #EB68A0;
+                                border: solid 2px #fff;
+                                border-radius: 50px;
+                                box-shadow: 0px 0px 8px gray;
+                                color: #fff;
+                                cursor: pointer;
+                                width: 150px;
+                                font-size: 17px;
+                                margin: 0 0 50px 40%;
                             }
                         }
     
                         .item3 {
                             background-color: $item-color;
-    
+                            padding-bottom: 50px;
                             img {
                                 height: $item-img-height;
                                 width: $item-img-width;
@@ -814,20 +905,25 @@ body {
                             p {
                                 font-size: $item-font-size;
                                 background-color: #fff;
+                                margin: 5px 0 10px 0;
+                            }
+                            .sp-btn {
+                                display: block;
+                                background-color: #EB68A0;
+                                border: solid 2px #fff;
+                                border-radius: 50px;
+                                box-shadow: 0px 0px 8px gray;
+                                color: #fff;
+                                cursor: pointer;
+                                width: 150px;
+                                font-size: 17px;
+                                margin: 0 0 0 40%;
                             }
                         }
                     }
     
-                    button {
-                        background-color: #EB68A0;
-                        border: solid 2px #fff;
-                        border-radius: 50px;
-                        box-shadow: 0px 0px 8px gray;
-                        color: #fff;
-                        width: 400px;
-                        height: 50px;
-                        font-size: 17px;
-                        margin: 50px 0;
+                    .pc-btn {
+                        display: none;
                     }
                 }
     
@@ -872,19 +968,6 @@ body {
                             font-size: 14px;
                             margin: 10px 0 10px 30px;
                             line-height: 2;
-                        }
-    
-                        button {
-                            background-color: #A29453;
-                            border: none;
-                            box-shadow: 2px 2px 4px gray;
-                            width: 100%;
-                            display: block;
-                            color: #fff;
-                            font-size: 17px;
-                            padding: 5px 0;
-                            margin-top: 30px;
-                            margin-bottom: 10px;
                         }
     
                         button::after {
